# SimpleLyrics

./: README.md  setup.cfg
.github/workflows/: forgejo-pr-sync.yml
SimpleLyrics/: __init__.py  __main__.py
