[metadata]
name=SimpleLyrics
version=0.0.3
description="Simple cli app for lyrics search"
long_description= file: README.md
long_description_content_type=text/markdown
author=Kamuri Amorim
author_email=luiz.k.amorim@gmail.com
url=https://github.com/kamuridesu/SimpleLyrics
keywords=music letras lyrics python cli
license=MIT
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
[options]
packages =
    SimpleLyrics
install_requires =
    requests
    beautifulsoup4
[options.entry_points]
console_scripts =
    pylyrics = SimpleLyrics:cli